--- a/1.html
+++ b/1.html
@@ -8,11 +8,11 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7053043897766687"
      crossorigin="anonymous"></script>
      <meta name="google-site-verification" content="PAsOohFujr6zTrD_Mb5Lf4CpCLAdeKZsoLcbkOcRZXw" />
-    <title>Android-Tips</title>
+    <title>刷機教學-起始準備篇</title>
     <meta property="og:site_name" content="AndroidTips" />
 <meta property="fb:app_id" content="AndroidTips" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Android-Tips" />
+<meta property="og:title" content="刷機教學-起始準備篇" />
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <link
@@ -29,7 +29,7 @@
     <div id="app">
        
        <navbar></navbar>
-       <div class="container mx-auto"><div class="breadcrumbs text-sm mb-4">
+       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4">
         <ul>
           <li>
             <a href="index.html">
