--- a/flash.html
+++ b/flash.html
@@ -28,8 +28,8 @@
     </noscript>
     <div id="app">
        
-       <navbar></navbar>
-       <div class="container mx-auto"><div class="breadcrumbs text-sm mb-4">
+       <navbar class=" "></navbar>
+       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4">
         <ul>
           <li>
             <a href="index.html">
