--- a/internet.html
+++ b/internet.html
@@ -29,7 +29,7 @@
     <div id="app">
        
        <navbar></navbar>
-       <div class="container mx-auto"><div class="breadcrumbs text-sm mb-4">
+       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4">
         <ul>
           <li>
             <a href="index.html">
