--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        <navbar></navbar>
        <div class="container mx-auto pt-24">
         <h1 class="text-3xl  font-extrabold text-center pb-2">熱門影片</h1>
-        <div class="lg:w-8/12  mx-auto"><div class="videobox relative w-full h-0"> <iframe class=" absolute top-0 left-0 w-full h-full " width="560" height="315" src="https://www.youtube.com/embed/vNSWJZqBJIo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="lg:w-8/12 relative z-[-1] mx-auto"><div class="videobox relative w-full h-0"> <iframe class=" absolute top-0 left-0 w-full h-full" width="560" height="315" src="https://www.youtube.com/embed/vNSWJZqBJIo?wmode=opaque" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
        </div>
       </div>
