--- a/flash.html
+++ b/flash.html
@@ -29,7 +29,7 @@
     <div id="app">
        
        <navbar class=" "></navbar>
-       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4">
+       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4 relative z-[-1]">
         <ul>
           <li>
             <a href="index.html">
