--- a/3.html
+++ b/3.html
@@ -30,7 +30,7 @@
     <div id="app">
        
        <navbar></navbar>
-       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4 relative z-[-1]">
+       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4 relative ">
         <ul>
           <li>
             <a href="index.html">
