--- a/beautification.html
+++ b/beautification.html
@@ -29,8 +29,7 @@
     <div id="app">
        
        <navbar></navbar>
-       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4  relative z-[-1]">
-        <ul>
+       <div class="container mx-auto pt-20"><div class="breadcrumbs text-sm mb-4  relative 
           <li>
             <a href="index.html">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="mr-2 h-4 w-4 stroke-current">
