--- a/4.html
+++ b/4.html
@@ -59,11 +59,11 @@
       </div></div>
       <div class="w-full my-12 text-center lg:w-4/6 mt-20 bg-[#f5f8fc] self-center mx-auto shadow-lg border border-slate-300 rounded-xl  dark:border-slate-700 dark:bg-[#1c1f26] dark:text-white">
 		<div class="mx-auto">
-			<h1 class="mx-auto text-2xl">讓陸版MIUI也收的到LINE通知</h1>
+			<h1 class="mx-auto text-2xl font-extrabold">讓陸版MIUI也收的到LINE通知</h1>
 		</div><br>
 		<div class="overflow-x-clip text-left p-8" id="block">
-			<p>作者:RSMN574<br>
-      陸版MIUI的電量和性能省電策略過於激進，導致LINE、messenger等無法收到通知。
+			<p class="text-slate-500 dark:text-slate-400">作者:RSMN574</p><br>
+    	<p > 陸版MIUI的電量和性能省電策略過於激進，導致LINE、messenger等無法收到通知。
              </p><br><br>
              <h2 class="text-lg">方法一(免root，但性能會略為下降)</h2>
              <p>停用電量和性能，解壓後接上手機執行DisablePowerKeeper，選擇服務項目</p>
@@ -74,7 +74,7 @@
              <br><br>
              <h2 class="text-lg">方法二(需root，Xposed框架LSPosed)</h2>
              <p>下載apk後安裝，到lsposed啟用，勾選需要FCM推送的應用，給需要FCM推送的應用的【自啟動】權限</p>
-             <img src="reyyrtuyhty2023-02-28 003805.jpg" class="w-3/6 lg:w-2/6 my-2">
+            
              <a href="https://minamigo-my.sharepoint.com/:f:/g/personal/koizumishouta_minamigo_onmicrosoft_com/Eo_5RkXx_2BPmb7H-Vt67P4B6PewFCe_8d1G0yjczYFgcA?e=tGob3V" class="underline text-blue-500">點我下載</a><br>
              <a href="https://blog.minamigo.moe/archives/747" class="underline text-blue-500">原文</a>
              <br><br>
