--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
     <div id="app">
        
        <navbar></navbar>
-       <div class="container mx-auto pt-24">
+       <div class="container mx-auto pt-24 overflow-x-auto">
         <h1 class="text-3xl  font-extrabold text-center pb-2">推薦文章</h1>
         <div class="flex flex-row h-full gap-2">
-          <div class="basis-60   "><a href="1.html"> <img src="a140678fb389d4b090858f09eeca426657aa2cde.jpg" class="rounded-xl"></a></div>
-          <div class="basis-60   "><a href="3.html"><img src="uyguuh2023-02-23 010710.jpg" class="rounded-xl"></a></div>
+          <div class="basis-60   "><div class="relative"><a href="1.html"> 
+            <img src="a140678fb389d4b090858f09eeca426657aa2cde.jpg" class="rounded-xl  brightness-50">
+            <h1 class="absolute bottom-1.5 left-1">刷機教學起始準備篇</h1></a></div></div>
+
+            <div class="basis-60   "><div class="relative"><a href="3.html"> 
+              <img src="ygyuh.jpg" class="rounded-xl  brightness-50">
+              <h1 class="absolute bottom-1.5 left-1">Android最強大的手柄映射程式</h1></a></div></div>
+         
         </div>
         <!--<h1 class="text-3xl  font-extrabold text-center pb-2">熱門影片</h1>
         <div class="lg:w-8/12 relative z-[-1] mx-auto"><div class="videobox relative w-full h-0"> <iframe class=" absolute top-0 left-0 w-full h-full" width="560" height="315" src="https://www.youtube.com/embed/vNSWJZqBJIo?wmode=opaque" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
