--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    href="https://cdn.jsdelivr.net/npm/rippleui@1.9.0/dist/css/styles.css"
 />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
@@ -28,9 +28,9 @@
     <div id="app">
        
        <navbar></navbar>
-       <div class="container mx-auto pt-24 overflow-x-auto">
+       <div class="container mx-auto pt-24 overflow-x-auto" >
         <h1 class="text-3xl  font-extrabold text-center pb-2">推薦文章</h1>
-        <div class="flex flex-row h-full gap-2">
+        <div class="flex flex-row h-full gap-2"  data-aos="fade-right">
           <div class="basis-60   "><div class="relative"><a href="1.html"> 
             <img src="a140678fb389d4b090858f09eeca426657aa2cde.jpg" class="rounded-xl  brightness-50">
             <h1 class="absolute bottom-1.5 left-1">刷機教學起始準備篇</h1></a></div></div>
@@ -45,6 +45,10 @@
         </div>
        </div>-->
       </div>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
        <script src="main.js" >
        
        </script>
