--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7053043897766687"
      crossorigin="anonymous"></script>
      <meta name="google-site-verification" content="PAsOohFujr6zTrD_Mb5Lf4CpCLAdeKZsoLcbkOcRZXw" />
+     <meta name="description" content="AndroidTips,Android,安卓,安卓app" />
     <title>Android-Tips</title>
     <meta property="og:site_name" content="AndroidTips" />
 <meta property="fb:app_id" content="AndroidTips" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Android-Tips" />
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="https://cdn.tailwindcss.com"></script>
+<script async src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script  src="https://cdn.tailwindcss.com"></script>
 <link
    rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/rippleui@1.9.0/dist/css/styles.css"
@@ -32,11 +33,11 @@
         <h1 class="text-3xl  font-extrabold text-center pb-2">推薦文章</h1>
         <div class="flex flex-row h-full gap-2"  data-aos="fade-right">
           <div class="basis-60   "><div class="relative"><a href="1.html"> 
-            <img src="a140678fb389d4b090858f09eeca426657aa2cde.jpg" class="rounded-xl  brightness-50">
+            <img src="a140678fb389d4b090858f09eeca426657aa2cde.jpg" class="rounded-xl  brightness-50" alt="刷機教學起始準備篇">
             <h1 class="absolute bottom-1.5 left-1">刷機教學起始準備篇</h1></a></div></div>
 
             <div class="basis-60   "><div class="relative"><a href="3.html"> 
-              <img src="ygyuh.jpg" class="rounded-xl  brightness-50">
+              <img src="ygyuh.jpg" class="rounded-xl  brightness-50" alt="Android最強大的手柄映射程式">
               <h1 class="absolute bottom-1.5 left-1">Android最強大的手柄映射程式</h1></a></div></div>
          
         </div>
