--- a/6.html
+++ b/6.html
@@ -8,7 +8,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7053043897766687"
      crossorigin="anonymous"></script>
      <meta name="google-site-verification" content="PAsOohFujr6zTrD_Mb5Lf4CpCLAdeKZsoLcbkOcRZXw" />
-     <meta name="description" content="Musify,YT音樂,安卓,音樂" />
+     <meta name="description" content="相信不少人都會在YT聽音樂，每次都會被廣告打擾或是想要有能背景播放音樂、下載。這次要推薦一個音樂APP「Musify」。" />
     <title>Musify背景播放YT音樂</title>
     <meta property="og:site_name" content="AndroidTips" />
 <meta property="fb:app_id" content="AndroidTips" />
