--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="fb:app_id" content="AndroidTips" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Android-Tips" />
-<script async src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script  src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script  src="https://cdn.tailwindcss.com"></script>
 <link
    rel="stylesheet"
@@ -39,6 +39,10 @@
             <div class="basis-60   "><div class="relative"><a href="3.html"> 
               <img src="ygyuh.jpg" class="rounded-xl  brightness-50" alt="Android最強大的手柄映射程式">
               <h1 class="absolute bottom-1.5 left-1">Android最強大的手柄映射程式</h1></a></div></div>
+
+              <div class="basis-60   "><div class="relative"><a href="6.html"> 
+                <img src="rfserty%20op5.jpg" class="rounded-xl  brightness-50" alt="Musify背景播放YT音樂">
+                <h1 class="absolute bottom-1.5 left-1">Musify背景播放YT音樂</h1></a></div></div>
          
         </div>
         <!--<h1 class="text-3xl  font-extrabold text-center pb-2">熱門影片</h1>
