--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         <div class="flex flex-row h-full gap-2"  data-aos="fade-right">
           <div class="basis-60   "><div class="relative"><a href="1.html"> 
             <img src="a140678fb389d4b090858f09eeca426657aa2cde.jpg" class="rounded-xl  brightness-50" alt="刷機教學起始準備篇">
-            <h1 class="absolute bottom-1.5 left-1">刷機教學起始準備篇</h1></a></div></div>
+            <h1 class="absolute bottom-1.5 left-1 text-white">刷機教學起始準備篇</h1></a></div></div>
 
             <div class="basis-60   "><div class="relative"><a href="3.html"> 
               <img src="ygyuh.jpg" class="rounded-xl  brightness-50" alt="Android最強大的手柄映射程式">
-              <h1 class="absolute bottom-1.5 left-1">Android最強大的手柄映射程式</h1></a></div></div>
+              <h1 class="absolute bottom-1.5 left-1 text-white">Android最強大的手柄映射程式</h1></a></div></div>
 
               <div class="basis-60   "><div class="relative"><a href="6.html"> 
                 <img src="rfserty%20op5.jpg" class="rounded-xl  brightness-50" alt="Musify背景播放YT音樂">
-                <h1 class="absolute bottom-1.5 left-1">Musify背景播放YT音樂</h1></a></div></div>
+                <h1 class="absolute bottom-1.5 left-1 text-white">Musify背景播放YT音樂</h1></a></div></div>
          
         </div>
         <!--<h1 class="text-3xl  font-extrabold text-center pb-2">熱門影片</h1>
