--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/rippleui@1.9.0/dist/css/styles.css"
 />
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <body>
@@ -45,6 +46,9 @@
                 <img src="rfserty%20op5.jpg" class="rounded-xl  brightness-50" alt="Musify背景播放YT音樂">
                 <h1 class="absolute bottom-1.5 left-1 text-white">Musify背景播放YT音樂</h1></a></div></div>
          
+                <div class=" basis-60  flex-none "><div class="relative"><a href="8.html"> 
+                  <img src="mockview.jpg" class="rounded-xl  brightness-50" alt="使用「Mockview」 將螢幕截圖套上iPhone、iPad、Mac、Apple Watch 外框">
+                  <h1 class="absolute bottom-1.5 left-1 text-white">使用「Mockview」 將螢幕截圖套上iPhone、iPad、Mac、Apple Watch 外框</h1></a></div></div>
         </div>
         <!--<h1 class="text-3xl  font-extrabold text-center pb-2">熱門影片</h1>
         <div class="lg:w-8/12 relative z-[-1] mx-auto"><div class="videobox relative w-full h-0"> <iframe class=" absolute top-0 left-0 w-full h-full" width="560" height="315" src="https://www.youtube.com/embed/vNSWJZqBJIo?wmode=opaque" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
